@@ -49,9 +49,9 @@ AR_STATIC_ARGS = cr
 NAME = Net::Printer
 DISTNAME = Net-Printer
 NAME_SYM = Net_Printer
-VERSION = 0.30
-VERSION_SYM = 0_30
-XS_VERSION = 0.30
+VERSION = 0.40
+VERSION_SYM = 0_40
+XS_VERSION = 0.40
 INST_BIN = blib/bin
 INST_EXE = blib/script
 INST_LIB = blib/lib
@@ -639,7 +639,7 @@ testdb_static :: testdb_dynamic
 # --- MakeMaker ppd section:
 # Creates a PPD (Perl Package Description) for a binary distribution.
 ppd:
-	@$(PERL) -e "print qq{<SOFTPKG NAME=\"Net-Printer\" VERSION=\"0,30,0,0\">\n}. qq{\t<TITLE>Net-Printer</TITLE>\n}. qq{\t<ABSTRACT>Perl extension for direct-to-lpd printing.</ABSTRACT>\n}. qq{\t<AUTHOR>A. U. Thor &lt;a.u.thor\@a.galaxy.far.far.away&gt;</AUTHOR>\n}. qq{\t<IMPLEMENTATION>\n}. qq{\t\t<OS NAME=\"$(OSNAME)\" />\n}. qq{\t\t<ARCHITECTURE NAME=\"i386-openbsd\" />\n}. qq{\t\t<CODEBASE HREF=\"\" />\n}. qq{\t</IMPLEMENTATION>\n}. qq{</SOFTPKG>\n}" > Net-Printer.ppd
+	@$(PERL) -e "print qq{<SOFTPKG NAME=\"Net-Printer\" VERSION=\"0,40,0,0\">\n}. qq{\t<TITLE>Net-Printer</TITLE>\n}. qq{\t<ABSTRACT>Perl extension for direct-to-lpd printing.</ABSTRACT>\n}. qq{\t<AUTHOR>A. U. Thor &lt;a.u.thor\@a.galaxy.far.far.away&gt;</AUTHOR>\n}. qq{\t<IMPLEMENTATION>\n}. qq{\t\t<OS NAME=\"$(OSNAME)\" />\n}. qq{\t\t<ARCHITECTURE NAME=\"i386-openbsd\" />\n}. qq{\t\t<CODEBASE HREF=\"\" />\n}. qq{\t</IMPLEMENTATION>\n}. qq{</SOFTPKG>\n}" > Net-Printer.ppd
 
 # --- MakeMaker pm_to_blib section:
 
